# rsawesome

./: Cargo.toml
src/: main.rs
src/algorithm/: mod.rs  queue.rs
src/algorithm/sort/: binary.rs  mod.rs  quick.rs
src/collections/: coll.rs  mod.rs
src/enume/: enumerate.rs  mod.rs
src/extern_lib/: http_ureq.rs  json_parse.rs  mod.rs  req.rs  rusqlite.rs  slog.rs  sqlxlite.rs  trace_opentelemetry.rs
src/fmt_print/: mod.rs  print_std.rs
src/future_async/: mod.rs
src/leet_code/: container_moster_water.rs  mod.rs
src/mysqlcli/: mod.rs  mycli.rs
src/strt/: mod.rs  sstring.rs
src/struct_trait/: mod.rs  strait.rs
tests/: integration_test.rs
