[package]
name = "rsawesome"
version = "0.1.0"
authors = ["yangrui <yangrui9512@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typename = "0.1.1"
mysql = "*" 
chrono = "0.4"
reqwest = { version="0.11.8", features = ["blocking"]}
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
fern = "0.5"
log = "0.4"